--- a/style.css
+++ b/style.css
@@ -1,77 +1,269 @@
+:root{
+    -md-dark-color:black;
+    --dark-color:black
+
+}
+
 *{
-    margin: 0;
     padding: 0;
+    margin: 0;
     box-sizing: border-box;
+    font-family: sans-serif;
+    
 }
-
 body{
+    background-image: url("https://wallpaperaccess.com/full/467341.jpg");
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+}
+.wrapper{
     min-height: 100vh;
-    font-family: Arial, system-ui;
-    font-size: 1.25rem;
+}
+a{
+    text-decoration: none;
+}
+
+a:visited {
+    color: black;
+}
+
+.blur{
+    filter: blur(6px);
+}
+
+#containers{
     display: flex;
+    height: auto;
+    width: 100%;
+    padding: 10px;
+    font-weight: 700;
+    flex-wrap: wrap;
+    justify-content: start;
+    background-color: rgb(26, 26, 26);
+}
+
+#heading{
+    font-size: 20px;
+    margin: auto 0;
+    color: white
+}
+#heading span{
+    color: rgb(255, 72, 72);
+}
+#containers>img{
+    width: 50px;    
+    height: 50px;
+    border-radius: 50%;
+    margin-right: 20px;
+}
+
+.search-container{
+    background-image: url("https://wallpapers.com/images/featured/svj3txxxmkdcrjzj.jpg");
+    background-size: cover;
+    padding: 40px;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    gap: 10px;
+    border: 2px solid white;
+}
+
+.search-element{
+    display: flex;
+    align-items: stretch;
+    justify-content: center;
     flex-direction: column;
-    gap: 1em;
-    align-items: center;
-    padding: 1em;
-background-color: #000;
-color: #fff;
+    position: relative;
 }
 
+.form-control{
+    padding: 0.5rem 1.5rem;
+    font-size: 1.2rem;
+    border: none;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    box-shadow: 0 0 4px 1px rgb(0, 0, 0);
+    outline: none;
+    color: black;
+    width: 350px;
+}
 
+#fav-buttton{
+    height: 2.3pc;
+    width: 8pc;
+    background: white;
+    color: black;
+    border-radius: 12px;
+    border: none;
+    box-shadow: 0 0 4px 1px #232323;
+    font-size: 18px;
+}
+#fav-buttton:hover{
+    background: rgb(255, 55, 55);
+    color: rgb(255, 255, 255);
+    box-shadow: 0 0 4px 1px #ffffff;
+}
 
-form{
+.search-element h3{
+    align-self: center;
+    margin-right: 1rem;
+    font-size: 2rem;
+    color: white;
+    font-weight: 500;
+    margin-bottom: 1.5rem;
+}
+
+.search-list{
+    position: absolute;
+    top:100%;
+    max-height: 500px;
+    overflow-y: scroll;
+    z-index:10;
+}
+
+.search-list-item{
+    background-color: rgb(41, 41, 41);
+    padding: 0.5rem;
+    width: calc(350px - 8px);
+    color: white;
     display: flex;
     align-items: center;
-    gap: 1em;
-}
-
-input,button{
-    padding: .5em 1em;
-    border-radius: .25em;
-    border: 2px solid #fff;
-}
-
-button{
-    background-color: #000;
-    color: #fff;
-    font-weight: bold;
     cursor: pointer;
+    transition: none;
 }
 
-button:hover{
-    background-color: #fff;
-    color: #000;
+.search-list-item:hover{
+    background-color: rgb(82, 82, 82);
 }
 
-h2{
-    text-align: center;
+.search-item-thumbnail img{
+    width: 80px;
+    height: 80px;
+    margin-right: 1rem;
 }
 
-section{
-    max-width: 45ch;
-    margin: 1em auto;
-    display: grid;
-    gap: 1em;
-    grid-template-columns: repeat(2,1fr);
-    border: 2px solid #fff;
-    border-radius: 8px;
+.search-item-info h3{
+    font-weight: 600;
+    font-size: 1rem;
+}
+.search-list button{
+    border-radius: 5px;
+    font-size: 15px;
+    padding: 4px 8px;
+    border: none;
+}
+.search-list button:hover{
+    background-color: rgb(255, 81, 81);
+    color: white;
 }
 
-section p{
-    font-size: .75em;
-    text-align: justify;
+/*thumbnail */
+
+.search-list::-webkit-scrollbar{
+    width: 8px;
+}
+.search-list::-webkit-scrollbar-track{
+    background-color: black;
+}
+.search-list::-webkit-scrollbar-thumb{
+    background-color: rgb(255, 255, 255);
+    outline: none;
+    border-radius: 5px;
+}
+
+/* class to hide search list dynamically*/
+.hide-search-list{
+    display: none;
 }
 
 
-img{
-    max-width: 100%;
+/* Home List Details */
+.container{
+    margin-top: 50px;
+}
+
+#home-container{
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    margin-top: 50px;
+}
+#home-list{
+    display: flex;
+    flex-wrap: wrap;
+    height: max-content;
+    width: 80%;
+    justify-content: center;
+    margin: auto;
+}
+
+#home-list-ul{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: stretch;
+    gap: 20px;
+}
+
+#home-list-li{
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 15px;
+    box-shadow: 0 0 5px 1px #ffffff;
+    background-color: rgb(0, 0, 0);
+    transition: transform 0.3s ease-out;
+}
+#home-list-li:hover{
+    transform: scale(1.1);
+}
+#home-single-hero{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+    align-content: center;
+    margin:14px
+}
+
+#home-hero-info{
     display: block;
-    border-radius: 4px;
+    width: min-content;
+    color: white;
+}
+#home-top{
+    height: 100px;
+    width: 100px;
+}
+#home-top img{
+    position: relative;
+    height: 100px;
+    width: 100px;
+    border: 1px solid black;
 }
 
-.detail{
-    display: grid;
-    gap: 1em;
+#bottom{
+    margin-top: 20px;
+    display: block;
+    text-align: -webkit-center;
+}
+#home-hero-name{
+    font-size: smaller;
+    overflow: hidden;
+    word-wrap: break-word;
+
 }
 
 
+/* Responsive for Mobile View */
+
+/* For Mobile */
+@media screen and (max-width: 540px) {
+    .view {
+        width: 400px;
+    }
+}
